Better Pluralize 'n minutes ago'

BUG: 462261
FIXED-IN: 5.102